<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
              android:padding="10dp"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="30dp"
        android:onClick="setDate">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/todo_task"
            android:id="@+id/textView6"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Task form DB"
            android:id="@+id/et_fgmtEditTask"
            android:textSize="24dp"
            android:layout_gravity="right"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="0dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:id="@+id/textView8"
            android:textSize="20dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:text="DB date"
            android:id="@+id/btn_FgmtEditDate"
            android:layout_gravity="right"
            android:layout_marginTop="0dp"
            android:background="@color/background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priotity_level"
            android:id="@+id/textView7"
            android:textSize="20dp"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:id="@+id/fgmtSpinPriotity"
            android:layout_gravity="center_horizontal|right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes_label"
            android:id="@+id/textView9"
            android:textSize="20dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="No comments found"
            android:id="@+id/et_fgmtEditNotes"
            android:layout_weight="0.40"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="1">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_fgmtCancel"
                android:id="@+id/btnCancel"
                android:background="#ffeff0"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_fgmtConfirm"
                android:id="@+id/btnConfirm"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.57"
                android:background="@drawable/btn_date_shape"
                />
        </LinearLayout>

        <!--  android:background="@null"  -->
    </LinearLayout>

</LinearLayout>