<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background2"

    android:layout_margin="@dimen/main_activity_margin">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvItems"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="18dp"
        android:layout_above="@+id/btnAddItem"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:text="@string/btn_addTask_label"
        android:id="@+id/btnAddItem"

        android:onClick="onAddItem"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/btn_add_shape"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_task_label"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_marginRight="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="363dp"
        android:textSize="24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/btnAddItem"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:typeface="normal"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority_task"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="190dp"
        android:layout_marginStart="195dp"
        android:textSize="24dp"
        android:typeface="normal"
        android:visibility="visible"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/lvItems"
        android:layout_alignStart="@+id/lvItems"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>